# GameProgramming

./: .gitignore  README.md  envSetup.sh
SFML/: CMakeLists.txt  imgui.ini  projCmds.sh
SFML/dependencies/: CMakeLists.txt
SFML/src/: CMakeLists.txt  main.cpp
Test/: envCmds.sh
Test/src/: CMakeLists.txt  main.cpp
TestDir/: build.sh
